Add constraints via Jinja expressions
