# engine/baml-lib/baml-core/src/validate/validation_pipeline/validations/types.rs
@@ -1,6 +1,6 @@
 use baml_types::TypeValue;
 use internal_baml_diagnostics::DatamodelError;
-use internal_baml_schema_ast::ast::{FieldArity, FieldType, Identifier, WithName, WithSpan};
+use internal_baml_schema_ast::ast::{Argument, Attribute, Expression, FieldArity, FieldType, Identifier, WithName, WithSpan};
 
 use crate::validate::validation_pipeline::context::Context;
 
@@ -15,13 +15,15 @@ fn errors_with_names<'a>(ctx: &'a mut Context<'_>, idn: &Identifier) {
 
 /// Called for each type in the baml_src tree, validates that it is well-formed.
 ///
-/// Operates in two passes:
+/// Operates in three passes:
 ///
-///   1. Verify that the type is resolveable (for REF types)
-///   2. Verify that the type is well-formed/allowed in the language
+///   1. Verify that the type is resolveable (for REF types).
+///   2. Verify that the type is well-formed/allowed in the language.
+///   3. Verify that constraints on the type are well-formed.
 pub(crate) fn validate_type(ctx: &mut Context<'_>, field_type: &FieldType) {
     validate_type_exists(ctx, field_type);
     validate_type_allowed(ctx, field_type);
+    validate_type_constraints(ctx, field_type);
 }
 
 fn validate_type_exists(ctx: &mut Context<'_>, field_type: &FieldType) -> bool {
@@ -46,7 +48,7 @@ fn validate_type_exists(ctx: &mut Context<'_>, field_type: &FieldType) -> bool {
 fn validate_type_allowed(ctx: &mut Context<'_>, field_type: &FieldType) {
     match field_type {
         FieldType::Map(arity, kv_types, ..) => {
-            if (arity.is_optional()) {
+            if arity.is_optional() {
                 ctx.push_error(DatamodelError::new_validation_error(
                     format!("Maps are not allowed to be optional").as_str(),
                     field_type.span().clone(),
@@ -70,7 +72,7 @@ fn validate_type_allowed(ctx: &mut Context<'_>, field_type: &FieldType) {
         FieldType::Symbol(..) => {}
 
         FieldType::List(arity, field_type, ..) => {
-            if (arity.is_optional()) {
+            if arity.is_optional() {
                 ctx.push_error(DatamodelError::new_validation_error(
                     format!("Lists are not allowed to be optional").as_str(),
                     field_type.span().clone(),
@@ -82,6 +84,33 @@ fn validate_type_allowed(ctx: &mut Context<'_>, field_type: &FieldType) {
             for field_type in field_types {
                 validate_type_allowed(ctx, field_type);
             }
+        }
+    }
+}
+
+fn validate_type_constraints(ctx: &mut Context<'_>, field_type: &FieldType) {
+    let constraint_attrs = field_type.attributes().iter().filter(|attr| ["assert", "check"].contains(&attr.name.name())).collect::<Vec<_>>();
+    for Attribute { arguments, span, name, .. } in constraint_attrs.iter() {
+        let arg_expressions = arguments.arguments.iter().map(|Argument{value,..}| value).collect::<Vec<_>>();
+
+            match arg_expressions.as_slice() {
+                [Expression::JinjaExpressionValue(_, _), Expression::Identifier(Identifier::Local(s,_))] => {
+                    // Ok.
+                },
+                [Expression::JinjaExpressionValue(_, _)] => {
+                    if name.to_string() == "check" {
+                        ctx.push_error(DatamodelError::new_validation_error(
+                            "Check constraints must have a name.",
+                            span.clone()
+                        ))
+                    }
+                },
+                _ => {
+                    ctx.push_error(DatamodelError::new_validation_error(
+                        "A constraint must have one Jinja argument such as {{ expr }}, and optionally one String label",
+                        span.clone()
+                    ));
+                }
         }
     }
 }
